@@ -1,3 +1,7 @@
+2010-11-13  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.c (Fwindow_use_time): New function.
+
 2010-11-13  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (set_cursor_from_row): Fix cursor positioning on
